FIX: Hovering items in CheckList no longer causes items to change their width (possibly causing the line to wrap)

--- a/src/gui/Components/ScreenElements/Editors/CheckList.module.scss
+++ b/src/gui/Components/ScreenElements/Editors/CheckList.module.scss
@@ -32,7 +32,7 @@
   @include hoverItemAnimation;
 
   &:hover {
-    font-weight: 700;
+    color: #4c84ff;
   }
   :global(.checkbox) {
     padding: 5px;
